2014-02-08  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/bits/in.h (IP_NODEFRAG): Define.
	(IP_PMTUDISC_INTERFACE): Likewise.
	(IP_MULTICAST_IF): Likewise.
	(IP_MULTICAST_TTL): Likewise.
	(IP_MULTICAST_LOOP): Likewise.
	(IP_ADD_MEMBERSHIP): Likewise.
	(IP_DROP_MEMBERSHIP): Likewise.
	(IP_UNBLOCK_SOURCE): Likewise.
	(IP_BLOCK_SOURCE): Likewise.
	(IP_ADD_SOURCE_MEMBERSHIP): Likewise.
	(IP_DROP_SOURCE_MEMBERSHIP): Likewise.
	(IP_MSFILTER): Likewise.
	(MCAST_JOIN_GROUP): Likewise.
	(MCAST_BLOCK_SOURCE): Likewise.
	(MCAST_UNBLOCK_SOURCE): Likewise.
	(MCAST_LEAVE_GROUP): Likewise.
	(MCAST_JOIN_SOURCE_GROUP): Likewise.
	(MCAST_LEAVE_SOURCE_GROUP): Likewise.
	(MCAST_MSFILTER): Likewise.
	(IP_MULTICAST_ALL): Likewise.
	(IP_UNICAST_IF): Likewise.

2014-02-08  Mike Frysinger  <vapier@gentoo.org>

	* timezone/Makefile: Delete $(have-ksh) check.
	($(objpfx)tzselect): Change $(KSH) to $(BASH).
	* timezone/tzselect.ksh: Add +x mode bits.

2014-02-08  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/linux_fsinfo.h (AFS_SUPER_MAGIC): Define.
	(ANON_INODE_FS_MAGIC): Likewise.
	(BDEVFS_MAGIC): Likewise.
	(BINFMTFS_MAGIC): Likewise.
	(BTRFS_TEST_MAGIC): Likewise.
	(CRAMFS_MAGIC_WEND): Likewise.
	(DEBUGFS_MAGIC): Likewise.
	(ECRYPTFS_SUPER_MAGIC): Likewise.
	(EXT3_SUPER_MAGIC): Likewise.
	(EXT4_SUPER_MAGIC): Likewise.
	(FUTEXFS_SUPER_MAGIC): Likewise.
	(HOSTFS_SUPER_MAGIC): Likewise.
	(HUGETLBFS_MAGIC): Likewise.
	(MINIX3_SUPER_MAGIC): Likewise.
	(MTD_INODE_FS_MAGIC): Likewise.
	(NILFS_SUPER_MAGIC): Likewise.
	(OPENPROM_SUPER_MAGIC): Likewise.
	(PIPEFS_MAGIC): Likewise.
	(PSTOREFS_MAGIC): Likewise.
	(QNX6_SUPER_MAGIC): Likewise.
	(RAMFS_MAGIC): Likewise.
	(REISERFS_SUPER_MAGIC_STRING): Likewise.
	(REISER2FS_SUPER_MAGIC_STRING): Likewise.
	(REISER2FS_JR_SUPER_MAGIC_STRING): Likewise.
	(SECURITYFS_MAGIC): Likewise.
	(SELINUX_MAGIC): Likewise.
	(SMACK_MAGIC): Likewise.
	(SOCKFS_MAGIC): Likewise.
	(SQUASHFS_MAGIC): Likewise.
	(STACK_END_MAGIC): Likewise.