@@ -1,5 +1,12 @@
 2014-02-08  Mike Frysinger  <vapier@gentoo.org>
 
+	* debug/tst-longjmp_chk.c: Add header comment and include
+	../test-skeleton.c.
+	(do_test): Mark static.
+	(TEST_FUNCTION): Define.
+
+2014-02-08  Mike Frysinger  <vapier@gentoo.org>
+
 	* sysdeps/unix/sysv/linux/bits/in.h (IP_NODEFRAG): Define.
 	(IP_PMTUDISC_INTERFACE): Likewise.
 	(IP_MULTICAST_IF): Likewise.
